src/objects/MUSW__Permit_Contact__c.object
<CustomObject>
    <description>Contacts associated to a Permit</description>
    <fields>
        <fullName>MUSW__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Permit Contacts</relationshipLabel>
        <relationshipName>PermitContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Contact_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Tenant</fullName>
                </value>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Applicant</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Business Owner</fullName>
                </value>
                <value>
                    <fullName>Designer</fullName>
                </value>
                <value>
                    <fullName>Emergency Contact</fullName>
                </value>
                <value>
                    <fullName>Engineer</fullName>
                </value>
                <value>
                    <fullName>Interested Party</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Permits</relationshipLabel>
        <relationshipName>Contact_Permits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Permit2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permit</label>
        <referenceTo>MUSW__Permit2__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Permit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permit</label>
        <referenceTo>MUSW__Permit__c</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Permit Contact</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>